<resources>
    <string name="app_name">Eyefox Puzzle</string>
    <string name="home">Home</string>
    <string name="level">Level</string>
    <string name="cell">Cell</string>
    <string name="zero">0</string>
    <string name="play">Play</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="confirmation">Confirmation</string>
    <string name="resetMessage">Are you sure you want to start over from scratch ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="training">Training</string>
    <string name="option">Options</string>
    <string name="music">Music:</string>
    <string name="moves">Moves:</string>
    <string name="rules">Rules</string>
    <string name="rulesDialog">You have two grids made up of light and dark tiles. The goal is to make the two grids identical by swapping the color of a tile. When you make a swap, it will also flip the colors of all its neighboring tiles. Note that you can only swap tiles on the grid before the arrow (the arrow points to the final result).</string>
</resources>